# valdhran-core

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/migrations/: 0001_create_tenants.sql  0002_tenant_schema_template.sql  run_migrations.sh
crates/api/scripts/: smoke_test.sh
crates/api/src/: app.rs  app_state.rs  errors.rs  main.rs  router.rs
crates/api/src/handlers/: auth.rs  graphify.rs  mod.rs  tenants.rs  users.rs
crates/api/src/middleware/: auth.rs
crates/application/: Cargo.toml
crates/application/src/use_cases/: assign_role.rs  authenticate_user.rs  create_tenant.rs  mod.rs  refresh_token.rs  register_user.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entities/: mod.rs  permission.rs  role.rs  tenant.rs  user.rs
crates/domain/src/errors/: mod.rs
crates/domain/src/repositories/: mod.rs  role_repository.rs  tenant_repository.rs  user_repository.rs
crates/domain/src/value_objects/: email.rs  mod.rs  tenant_slug.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20260615000001_create_tenants_table.sql  20260615000002_create_tenant_schema_tables.sql
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/auth/: argon2_hasher.rs  jwt_token_service.rs  mod.rs
crates/infrastructure/src/config/: app_config.rs
crates/infrastructure/src/db/: mod.rs  pg_role_repository.rs  pg_tenant_repository.rs  pg_user_repository.rs
migrations/: 0001_create_tenants.sql  0002_create_refresh_tokens.sql  0003_create_tenant_schema_function.sql
