[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Valdraegorn Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP
axum = { version = "0.8", features = ["macros"] }
# DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# IDs
uuid = { version = "1", features = ["v4", "serde"] }
# Fechas
chrono = { version = "0.4", features = ["serde"] }
# Errores
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# JWT
jsonwebtoken = "9"
# Hashing passwords
argon2 = "0.5"
# Config
config = "0.14"
dotenvy = "0.15"
