[package]
name = "valdhran-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "valdhran-api"
path = "src/main.rs"

[dependencies]
# Workspace deps
valdhran-domain        = { path = "../domain" }
valdhran-application   = { path = "../application" }
valdhran-infrastructure = { path = "../infrastructure" }

tokio        = { workspace = true }
axum         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
sqlx         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
config       = { workspace = true }
dotenvy      = { workspace = true }
tower-http   = { version = "0.6", features = ["cors", "trace"] }
