[package]
name = "valdhran-application"
version.workspace = true
edition.workspace = true

[dependencies]
valdhran-domain = { path = "../domain" }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
