[package]
name = "valdhran-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
valdhran-domain = { path = "../domain" }
valdhran-application = { path = "../application" }
sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
